--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
+  title: title
   summary: MyText
   content: MyText
   markdown: MyText
@@ -14,7 +14,7 @@ one:
   can_comment: 1
 
 two:
-  title: MyString
+  title: title_two
   summary: MyText
   content: MyText
   markdown: MyText
