--- a/ngblog/bower.json
+++ b/ngblog/bower.json
@@ -14,7 +14,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-loading-bar": "~0.6.0",
-    "angular-bootstrap": "~0.12.0"
+    "angular-bootstrap": "~0.12.0",
+    "ng-tags-input": "~2.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
