--- a/ngblog/bower.json
+++ b/ngblog/bower.json
@@ -16,7 +16,8 @@
     "angular-loading-bar": "~0.6.0",
     "angular-bootstrap": "~0.12.0",
     "ng-tags-input": "~2.1.1",
-    "marked": "~0.3.3"
+    "marked": "~0.3.3",
+    "angular-file-upload": "~1.1.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
