--- a/ngblog/bower.json
+++ b/ngblog/bower.json
@@ -17,7 +17,8 @@
     "angular-bootstrap": "~0.12.0",
     "ng-tags-input": "~2.1.1",
     "marked": "~0.3.3",
-    "angular-file-upload": "~1.1.5"
+    "angular-file-upload": "~1.1.5",
+    "angular-busy": "~4.1.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
