--- a/ngblog/bower.json
+++ b/ngblog/bower.json
@@ -19,7 +19,8 @@
     "marked": "~0.3.3",
     "angular-file-upload": "~1.1.5",
     "underscore": "~1.7.0",
-    "localforage": "~1.2.2"
+    "localforage": "~1.2.2",
+    "angular-local-storage": "~0.1.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
