--- a/ngblog/.jshintrc
+++ b/ngblog/.jshintrc
@@ -1,6 +1,7 @@
 {
   "node": true,
   "browser": true,
+  "devel": true,
   "esnext": true,
   "bitwise": true,
   "camelcase": true,
@@ -18,6 +19,12 @@
   "trailing": true,
   "smarttabs": true,
   "globals": {
-    "angular": false
+    "angular": false,
+    "ace": true,
+    "UE": true,
+    "_": true,
+    "SmartPhone": true,
+    "marked": true,
+    "hljs": true
   }
 }
