--- a/ngblog/bower.json
+++ b/ngblog/bower.json
@@ -17,7 +17,8 @@
     "ng-tags-input": "~2.1.1",
     "angular-file-upload": "~1.1.5",
     "underscore": "~1.7.0",
-    "angular-local-storage": "~0.1.5"
+    "angular-local-storage": "~0.1.5",
+    "browser-detector": "~1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
