--- a/ngblog/bower.json
+++ b/ngblog/bower.json
@@ -18,7 +18,9 @@
     "angular-file-upload": "~1.1.5",
     "underscore": "~1.7.0",
     "angular-local-storage": "~0.1.5",
-    "browser-detector": "~1.0.0"
+    "browser-detector": "~1.0.0",
+    "ngInfiniteScroll": "~1.2.0",
+    "angular-carousel": "~0.3.9"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
